# AriaVessel

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
src/: http_client.py  logger.py  shared.py  text.py  ydisk.py
src/aria2/: __init__.py  statistics.py
src/bot/: __init__.py  actions.py  after.py  command_initialize.py  informant.py  receiver.py  security.py  settings.py  shared.py  states.py  upload.py
src/configs/: __init__.py  config_class.py
