[project]
name = "AriaVessel"
version = "0.1.8"
description = ""
authors = [
    {name = "None"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytelegrambotapi (==4.35.0)",
    "aria2p (>=0.12.1,<0.13.0)",
    "yadisk (>=3.4.0,<4.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "curl-cffi (>=0.15.0,<0.16.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "transliterate (>=1.10.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
